--- a/town_hall_1/styles/c6_main.css
+++ b/town_hall_1/styles/c6_main.css
@@ -9,7 +9,7 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 600px;
+    width: 800px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -47,40 +47,40 @@ header img {
 }
 /* the styles for the main content */
 main {
-	clear: left;
+	padding: 0px;
 }
-main {
-	padding: 0 30px;
+section{
+	width: 525px;
+	float: right;
+	padding: 0 20px 20px;
 }
-main h1 {
-	font-size: 150%;
-	padding: .3em 0;
-    border-top: 3px solid #931420;
-    border-bottom: 3px solid #931420;
-}
-main h2 {
+section h2 {
 	color: #800000;
-	font-size: 130%;
+	font-size: 150%;
 	padding: .5em 0 .25em 0;
 }
-main h3 {
+section h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
 }
-main img {
-	padding-bottom: 1em;
+section img {
+	float: right;
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-bottom: 10px;
+	border: 1px solid black;
 }
-main p {
+section p {
 	padding-bottom: .5em;
 }
-main blockquote {
-	padding: 0 2em;
+section blockquote {
+	padding: 0 2em 10px;
 	font-style: italic;
 }
-main ul {
+section ul {
 	padding: 0 0 .25em 1.25em;
 }
-main li {
+section li {
 	padding-bottom: .35em;
 }
 
@@ -99,10 +99,21 @@ article h3 {
 }
 
 /* the styles for the aside */
-
+aside {
+	width: 215px;
+	float: right;
+	padding-bottom: 20px;
+}
+aside h1{
+	font-size: 150%;
+	padding: .5em 0 .25em;
+	margin: 0;
+	color:#800000
+}
 aside h3 {
 	font-size: 105%;
-	padding-bottom: .25em;
+	padding-bottom: 5px;
+	padding-left: 0px;
 }
 aside img {
 	padding-bottom: 1em;
@@ -111,6 +122,7 @@ aside img {
 /* the styles for the footer */
 footer {
 	background-color: #931420;
+	clear: both;
 }
 footer p {
 	text-align: center;
