--- a/town_hall_1/styles/c6_speaker.css
+++ b/town_hall_1/styles/c6_speaker.css
@@ -53,13 +53,13 @@ section {
 }
 section h1 {
 	font-size: 150%;
-	padding: .5em 0 .25em 0;
+	padding: .5em 0 0 0;
 	margin: 0;
+	color: #800000;
 }
 section h2 {
-	color: #800000;
-	font-size: 130%;
-	padding: .5em 0 .25em 0;
+	font-size: 115%;
+	padding: 0 0 .25em 0;
 }
 section p {
 	padding-bottom: .5em;
@@ -78,8 +78,6 @@ section li {
 /* the styles for the article */
 article {
 	padding: .5em 0;
-	border-top: 2px solid #800000;
-	border-bottom: 2px solid #800000;
 }
 article h2 {
 	padding-top: 0;
@@ -90,7 +88,7 @@ article h3 {
 }
 article img {
 	float: right;
-	margin: .5em 0 1em 1em;
+	margin: .5em 0 2em 1em;
 	border: 1px solid black;
 }
 
